load("@ipu_as_deps//:requirements.bzl", "requirement")
load("@ipu_apps_pyproject//:deps.bzl", "get_requirements")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python_pytest//python_pytest:defs.bzl", "py_pytest_test")
load("//:asm_rules.bzl", "assemble_asm")

package(default_visibility = ["//visibility:public"])

exports_files([
    "pyproject.toml",
])

py_library(
    name = "ipu_apps_lib",
    srcs = glob(["src/ipu_apps/**/*.py"]),
    imports = ["src"],
    deps = [
        "//src/tools/ipu-emu-py:ipu_emu_lib",
        "//src/tools/ipu-as-py:ipu_as_lib",
        "//src/tools/ipu-common:ipu_common_lib",
    ] + get_requirements(requirement),
)

# -- Fully-connected app ---------------------------------------------------

exports_files([
    "src/ipu_apps/fully_connected/fully_connected.asm",
])

filegroup(
    name = "fc_test_data",
    srcs = glob(["src/ipu_apps/fully_connected/test_data_format/**/*.bin"]),
)

assemble_asm(
    name = "assemble_fully_connected",
    src = "src/ipu_apps/fully_connected/fully_connected.asm",
)

py_binary(
    name = "fully_connected",
    srcs = ["src/ipu_apps/fully_connected/__main__.py"],
    main = "src/ipu_apps/fully_connected/__main__.py",
    data = [
        ":assemble_fully_connected.bin",
        ":fc_test_data",
    ],
    env = {
        "FC_INST_BIN": "$(rootpath :assemble_fully_connected.bin)",
        "FC_DATA_DIR": "src/tools/ipu-apps/src/ipu_apps/fully_connected/test_data_format",
    },
    imports = ["src"],
    deps = [":ipu_apps_lib"],
)

py_pytest_test(
    name = "test_fully_connected",
    srcs = ["test/test_fully_connected.py"],
    data = [
        ":assemble_fully_connected.bin",
        ":fc_test_data",
    ],
    env = {
        "FC_INST_BIN": "$(rootpath :assemble_fully_connected.bin)",
        "FC_DATA_DIR": "src/tools/ipu-apps/src/ipu_apps/fully_connected/test_data_format",
    },
    imports = ["src"],
    deps = [
        ":ipu_apps_lib",
        requirement("pytest"),
    ],
)

# -- conv_universal apps (3x3 conv, walking-pointer) -----------------------
#
# These tests assemble the .asm in-process (assemble_to_bin_file in the test
# fixture), so the app .asm files are provided as data; no pre-assembled .bin
# target is needed.  The PyTorch cross-validation test
# (test_conv_universal_bn_activation_pytorch.py) is intentionally NOT declared
# here: it requires `torch`, which is not in the CI environment, so it would
# importorskip and report false coverage.  The numpy-reference tests below are
# the CI gate; the PyTorch test is a local-only cross-check (see its docstring).

py_pytest_test(
    name = "test_conv_universal",
    srcs = ["test/test_conv_universal.py"],
    data = [
        "src/ipu_apps/convolutions_universal/conv/conv_universal/conv_universal.asm",
    ],
    imports = ["src"],
    deps = [
        ":ipu_apps_lib",
        requirement("pytest"),
    ],
)

py_pytest_test(
    name = "test_conv_universal_bn_activation",
    srcs = ["test/test_conv_universal_bn_activation.py"],
    data = [
        "src/ipu_apps/convolutions_universal/conv/conv_universal_bn_activation/conv_universal_bn_activation.asm",
    ],
    imports = ["src"],
    deps = [
        ":ipu_apps_lib",
        requirement("pytest"),
    ],
)

py_pytest_test(
    name = "test_pointwise_conv_unified",
    srcs = ["test/test_pointwise_conv_unified.py"],
    data = [
        "src/ipu_apps/convolutions_universal/pointwise/pointwise_conv_unified/pointwise_conv_unified.asm",
    ],
    imports = ["src"],
    deps = [
        ":ipu_apps_lib",
        requirement("pytest"),
    ],
)

py_pytest_test(
    name = "test_pointwise_conv_unified_bn_activation",
    srcs = ["test/test_pointwise_conv_unified_bn_activation.py"],
    data = [
        "src/ipu_apps/convolutions_universal/pointwise/pointwise_conv_unified_bn_activation/pointwise_conv_unified_bn_activation.asm",
    ],
    imports = ["src"],
    deps = [
        ":ipu_apps_lib",
        requirement("pytest"),
    ],
)
