load("@ipu_as_deps//:requirements.bzl", "requirement")
load("@ipu_as_pyproject//:deps.bzl", "get_requirements")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

# Update requirements.txt from pyproject.toml by running:
# bazel run //src/tools/ipu-as-py:update_requirements
exports_files([
    "pyproject.toml",
])

py_library(
    name = "ipu_as_lib",
    srcs = glob([
        "src/ipu_as/*.py",
    ]),
    data = glob([
        "src/ipu_as/**/*.lark",
    ]),
    imports = ["src"],
    deps = [
        "//src/tools/ipu-common:ipu_common_lib",
    ] + get_requirements(requirement),
)

py_binary(
    name = "ipu-as",
    srcs = ["src/ipu_as/cli.py"],
    imports = ["src"],
    main = "src/ipu_as/cli.py",
    deps = [":ipu_as_lib"],
)

py_test(
    name = "test_assemble",
    srcs = ["test/test_assemble.py"],
    imports = ["src"],
    deps = [":ipu_as_lib"],
)
