[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipu-as-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bitstruct>=8.21.0",
    "click>=8.3.1",
    "lark>=1.3.1",
    "pytest>=9.0.1",
]

[project.scripts]
ipu-as = "ipu_as.cli:cli"

[tools.setuptools.package-data]
"ipu_as" = ["**/*.lark"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true
