[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipu-as-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "lark>=1.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]

[project.scripts]
ipu-as = "ipu_as.cli:cli"

[tool.setuptools.package-data]
ipu_as = ["*.lark", "**/*.lark"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.uv]
package = true
