[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipu-as-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "lark>=1.3.1",
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
ipu-as = "ipu_as.cli:cli"

[tool.setuptools.package-data]
ipu_as = ["*.lark", "**/*.lark", "*.j2", "**/*.j2"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.uv]
package = true
