[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipu-ctrl-rdl"
version = "0.1.0"
description = "SystemRDL codegen for the IPU host-control register block"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "systemrdl-compiler>=1.32.0",
    "Jinja2>=3.1.0",
    "peakrdl>=1.5.0",
    "peakrdl-html>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.uv]
package = true
